# stdx-allocator

./: .gitignore  .travis.yml  README.md  dub.sdl  dub.selections.json  meson.build
source/: meson.build
source/stdx/allocator/: common.d  gc_allocator.d  internal.d  mallocator.d  mmap_allocator.d  package.d  showcase.d  typed.d
source/stdx/allocator/building_blocks/: affix_allocator.d  allocator_list.d  bitmapped_block.d  bucketizer.d  fallback_allocator.d  free_list.d  free_tree.d  kernighan_ritchie.d  null_allocator.d  package.d  quantizer.d  region.d  scoped_allocator.d  segregator.d  stats_collector.d
